# ext

./: .bazelrc  .gitignore  CMakeLists.txt  LICENSE  MODULE.bazel  README.md  WORKSPACE  core.h
bazel/: BUILD.pugixml
core/: COM.h  check.h  defines.h  dependency_injection.h  dispatcher.h  mpl.h  noncopyable.h  singleton.h  tick.h
detail/: constructor_traits.h
error/: README.md  dump_writer.h  exception.h  result.h
include/: BUILD
include/ext/: README.md  core.h
include/ext/constexpr/: map.h  string.h
include/ext/core/: COM.h  README.md  check.h  command_line.h  defines.h  dependency_injection.h  dispatcher.h  mpl.h  singleton.h  tracer.h
include/ext/details/: atomic_details.h  constructor_traits_details.h  reflection_details.h  sleep.h  stop_token_details.h  thread_details.h  tracer_details.h
include/ext/details/reflection/: enum_details.h  object_details.h  object_fields_details.h
include/ext/details/serialization/: serializable_descriptor_details.h  serializable_details.h  serializer_details.h
include/ext/error/: README.md  dump_writer.h  exception.h  result.h
include/ext/reflection/: enum.h  object.h
include/ext/scope/: README.md  auto_setter.h  defer.h  on_exit.h
include/ext/serialization/: README.md  iserializable.h  serializable_impl.h  serializable_value.h  serializer.h  serializer_impl.h
include/ext/serialization/serializers/: json.h  text.h  xml.h
include/ext/std/: README.md  array.h  atomic.h  filesystem.h  memory.h  source_location.h  string.h  type_traits.h
include/ext/thread/: README.md  channel.h  event.h  invoker.h  scheduler.h  stop_token.h  thread.h  thread_pool.h  tick.h  wait_group.h
include/ext/trace/: README.md  itracer.h  tracer.h  workers.h
include/ext/types/: README.md  const_map.h  lazy.h  utils.h  uuid.h
include/ext/utils/: call_once.h  com.h  invoke.h  lazy_type.h  nano_atomic.h  reflection.h  registry.h  stop_token_details.h  thread_details.h  utils.h  uuid.h
scope/: defer.h  on_exit.h
serialization/: README.md  iserializable.h  serializable_impl.h  serializable_value.h  serializer.h  serializer_impl.h
serialization/serializers/: text.h  xml.h
std/: memory.h  string.h  type_traits.h
test/: main.cpp
test/core/: BUILD  dependency_injection_test.cpp  dispatcher_test.cpp
test/details/: constructor_traits_details_test.cpp
test/error/: BUILD
test/samples/: samples_helper.h
test/samples/serialization/: text_default.txt  xml_default.xml
test/serialization/: serialization_test.cpp
test/std/: string_test.cpp
test/thread/: BUILD  channel_test.cpp  event_test.cpp  stop_token_test.cpp  thread_pool_test.cpp  thread_test.cpp
test/utils/: BUILD  com_test.cpp  constructor_traits_test.cpp
tests/: BUILD  CMakeLists.txt  extensions.bzl  main.cpp
tests/constexpr/: BUILD  map_test.cpp  string_test.cpp
tests/core/: BUILD  command_line_test.cpp  dependency_injection_test.cpp  dispatcher_test.cpp  tracer_test.cpp
tests/details/: BUILD
tests/error/: BUILD  exception_test.cpp
tests/reflection/: BUILD  enum_test.cpp  object_test.cpp
tests/samples/: BUILD  samples_helper.h
tests/samples/serialization/: json_c++20_default.txt  json_c++20_modification.txt  json_default.txt  json_modification.txt  text_c++20_default.txt  text_c++20_modification.txt  text_default.txt  text_modification.txt  xml_default.xml  xml_modification.xml
tests/serialization/: BUILD  serialization_c++20_test.cpp  serialization_test.cpp
tests/std/: BUILD  string_test.cpp
tests/thread/: BUILD  channel_test.cpp  event_test.cpp  scheduler_test.cpp  stop_token_test.cpp  thread_pool_test.cpp  thread_test.cpp
tests/types/: BUILD  const_map_test.cpp
tests/utils/: BUILD  com_test.cpp  reflection_test.cpp
thread/: README.md  event.h  invoker.h  scheduler.h  scheduller.h  stop_token.h  thread.h  thread_pool.h  tick.h
trace/: README.md  itracer.h  tracer.h  workers.h
utils/: call_once.h  constructor_traits.h  filesystem.h  lazy_type.h  nano_atomic.h  registry.h  stop_token_details.h  string.h  thread_details.h  type_traits.h
